// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDataTable should render correctly when "onRowClick" is set 1`] = `
<DocumentFragment>
  <div
    style="overflow: visible; width: 0px;"
  >
    <div
      aria-colcount="3"
      aria-rowcount="2"
      class="ReactVirtualized__Table bpk-data-table"
      role="grid"
    >
      <div
        class="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__row--clickable bpk-data-table__header-row"
        role="row"
        style="height: 60px; overflow: hidden; padding-right: 0px; width: 0px;"
      >
        <div
          aria-label="Name"
          aria-sort="ascending"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Name"
          >
            Name
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Description"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 1 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Description"
          >
            Description
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Bla"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Bla"
          >
            Bla
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-label="grid"
        class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
        role="rowgroup"
        style="box-sizing: border-box; height: 140px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDataTable should render correctly with a custom className 1`] = `
<DocumentFragment>
  <div
    style="overflow: visible; width: 0px;"
  >
    <div
      aria-colcount="3"
      aria-rowcount="2"
      class="ReactVirtualized__Table bpk-data-table custom-data-table"
      role="grid"
    >
      <div
        class="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
        role="row"
        style="height: 60px; overflow: hidden; padding-right: 0px; width: 0px;"
      >
        <div
          aria-label="Name"
          aria-sort="ascending"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Name"
          >
            Name
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Description"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 1 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Description"
          >
            Description
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Bla"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Bla"
          >
            Bla
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-label="grid"
        class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
        role="rowgroup"
        style="box-sizing: border-box; height: 140px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDataTable should render correctly with a custom headerClassName 1`] = `
<DocumentFragment>
  <div
    style="overflow: visible; width: 0px;"
  >
    <div
      aria-colcount="3"
      aria-rowcount="2"
      class="ReactVirtualized__Table bpk-data-table"
      role="grid"
    >
      <div
        class="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
        role="row"
        style="height: 60px; overflow: hidden; padding-right: 0px; width: 0px;"
      >
        <div
          aria-label="Name"
          aria-sort="ascending"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column custom-data-table__header"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Name"
          >
            Name
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Description"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column custom-data-table__header"
          role="columnheader"
          style="flex: 1 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Description"
          >
            Description
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Bla"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column custom-data-table__header"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Bla"
          >
            Bla
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-label="grid"
        class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
        role="rowgroup"
        style="box-sizing: border-box; height: 140px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDataTable should render correctly with a custom rowClassName function 1`] = `
<DocumentFragment>
  <div
    style="overflow: visible; width: 0px;"
  >
    <div
      aria-colcount="3"
      aria-rowcount="2"
      class="ReactVirtualized__Table bpk-data-table"
      role="grid"
    >
      <div
        class="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row custom-data-table__row_odd"
        role="row"
        style="height: 60px; overflow: hidden; padding-right: 0px; width: 0px;"
      >
        <div
          aria-label="Name"
          aria-sort="ascending"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Name"
          >
            Name
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Description"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 1 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Description"
          >
            Description
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Bla"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Bla"
          >
            Bla
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-label="grid"
        class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
        role="rowgroup"
        style="box-sizing: border-box; height: 140px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDataTable should render correctly with a custom rowClassName string 1`] = `
<DocumentFragment>
  <div
    style="overflow: visible; width: 0px;"
  >
    <div
      aria-colcount="3"
      aria-rowcount="2"
      class="ReactVirtualized__Table bpk-data-table"
      role="grid"
    >
      <div
        class="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row custom-data-table__row"
        role="row"
        style="height: 60px; overflow: hidden; padding-right: 0px; width: 0px;"
      >
        <div
          aria-label="Name"
          aria-sort="ascending"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Name"
          >
            Name
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Description"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 1 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Description"
          >
            Description
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Bla"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Bla"
          >
            Bla
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-label="grid"
        class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
        role="rowgroup"
        style="box-sizing: border-box; height: 140px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDataTable should render correctly with a specified width 1`] = `
<DocumentFragment>
  <div
    aria-colcount="3"
    aria-rowcount="2"
    class="ReactVirtualized__Table bpk-data-table"
    role="grid"
  >
    <div
      class="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
      role="row"
      style="height: 60px; overflow: hidden; padding-right: 0px; width: 400px;"
    >
      <div
        aria-label="Name"
        aria-sort="ascending"
        class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        role="columnheader"
        style="flex: 0 1 100px;"
        tabindex="0"
      >
        <span
          class="bpk-data-table-column__header"
          title="Name"
        >
          Name
        </span>
        <div
          class="bpk-data-table-column__sort-icons"
        >
          <svg
            class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
            />
          </svg>
          <svg
            class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-label="Description"
        aria-sort="none"
        class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        role="columnheader"
        style="flex: 1 1 100px;"
        tabindex="0"
      >
        <span
          class="bpk-data-table-column__header"
          title="Description"
        >
          Description
        </span>
        <div
          class="bpk-data-table-column__sort-icons"
        >
          <svg
            class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
            />
          </svg>
          <svg
            class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
            />
          </svg>
        </div>
      </div>
      <div
        aria-label="Bla"
        aria-sort="none"
        class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
        role="columnheader"
        style="flex: 0 1 100px;"
        tabindex="0"
      >
        <span
          class="bpk-data-table-column__header"
          title="Bla"
        >
          Bla
        </span>
        <div
          class="bpk-data-table-column__sort-icons"
        >
          <svg
            class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
            />
          </svg>
          <svg
            class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-label="grid"
      class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
      role="rowgroup"
      style="box-sizing: border-box; height: 140px; position: relative; width: 400px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
      tabindex="0"
    >
      <div
        class="ReactVirtualized__Grid__innerScrollContainer"
        role="rowgroup"
        style="width: auto; height: 120px; max-width: 400px; max-height: 120px; overflow: hidden; position: relative;"
      >
        <div
          aria-label="row"
          aria-rowindex="1"
          class="ReactVirtualized__Table__row bpk-data-table__row"
          role="row"
          style="height: 60px; left: 0px; position: absolute; top: 0px; width: 400px; overflow: hidden; padding-right: 0px;"
          tabindex="0"
        >
          <div
            aria-colindex="1"
            class="ReactVirtualized__Table__rowColumn bpk-data-table-column"
            role="gridcell"
            style="overflow: hidden; flex: 0 1 100px;"
            title="Jose"
          >
            Jose
          </div>
          <div
            aria-colindex="2"
            class="ReactVirtualized__Table__rowColumn bpk-data-table-column"
            role="gridcell"
            style="overflow: hidden; flex: 1 1 100px;"
            title="Software Engineer"
          >
            Software Engineer
          </div>
          <div
            aria-colindex="3"
            class="ReactVirtualized__Table__rowColumn bpk-data-table-column"
            role="gridcell"
            style="overflow: hidden; flex: 0 1 100px;"
            title="Bla"
          >
            Bla
          </div>
        </div>
        <div
          aria-label="row"
          aria-rowindex="2"
          class="ReactVirtualized__Table__row bpk-data-table__row"
          role="row"
          style="height: 60px; left: 0px; position: absolute; top: 60px; width: 400px; overflow: hidden; padding-right: 0px;"
          tabindex="0"
        >
          <div
            aria-colindex="1"
            class="ReactVirtualized__Table__rowColumn bpk-data-table-column"
            role="gridcell"
            style="overflow: hidden; flex: 0 1 100px;"
            title="Rolf"
          >
            Rolf
          </div>
          <div
            aria-colindex="2"
            class="ReactVirtualized__Table__rowColumn bpk-data-table-column"
            role="gridcell"
            style="overflow: hidden; flex: 1 1 100px;"
            title="Some guy"
          >
            Some guy
          </div>
          <div
            aria-colindex="3"
            class="ReactVirtualized__Table__rowColumn bpk-data-table-column"
            role="gridcell"
            style="overflow: hidden; flex: 0 1 100px;"
            title="Bla"
          >
            Bla
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkDataTable should render correctly with multiple columns 1`] = `
<DocumentFragment>
  <div
    style="overflow: visible; width: 0px;"
  >
    <div
      aria-colcount="3"
      aria-rowcount="2"
      class="ReactVirtualized__Table bpk-data-table"
      role="grid"
    >
      <div
        class="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
        role="row"
        style="height: 60px; overflow: hidden; padding-right: 0px; width: 0px;"
      >
        <div
          aria-label="Name"
          aria-sort="ascending"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Name"
          >
            Name
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Description"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 1 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Description"
          >
            Description
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Bla"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Bla"
          >
            Bla
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-label="grid"
        class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
        role="rowgroup"
        style="box-sizing: border-box; height: 140px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDataTable should render correctly with no data; only headers 1`] = `
<DocumentFragment>
  <div
    style="overflow: visible; width: 0px;"
  >
    <div
      aria-colcount="3"
      aria-rowcount="0"
      class="ReactVirtualized__Table bpk-data-table"
      role="grid"
    >
      <div
        class="ReactVirtualized__Table__headerRow bpk-data-table__row bpk-data-table__header-row"
        role="row"
        style="height: 60px; overflow: hidden; padding-right: 0px; width: 0px;"
      >
        <div
          aria-label="Name"
          aria-sort="ascending"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Name"
          >
            Name
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Description"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 1 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Description"
          >
            Description
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
        <div
          aria-label="Bla"
          aria-sort="none"
          class="ReactVirtualized__Table__headerColumn bpk-data-table__header-column"
          role="columnheader"
          style="flex: 0 1 100px;"
          tabindex="0"
        >
          <span
            class="bpk-data-table-column__header"
            title="Bla"
          >
            Bla
          </span>
          <div
            class="bpk-data-table-column__sort-icons"
          >
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
              />
            </svg>
            <svg
              class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
              height="8"
              style="width: .5rem; height: .5rem;"
              viewBox="0 0 16 16"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-label="grid"
        class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
        role="rowgroup"
        style="box-sizing: border-box; height: 140px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;
